--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ target_sources(sessions PRIVATE
 # tests
 add_executable(tests test/test.cpp test/util.cpp)
 target_link_libraries(tests PRIVATE sessions)
-if(WIN32)
-  target_compile_definitions(tests PRIVATE UNICODE)
+
+if(MSVC)
+  add_compile_definitions(UNICODE, _UNICODE)
 endif()
