--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(sessions)
 
-set(INC_DIR ${PROJECT_SOURCE_DIR}/include/ixm)
+set(INC_DIR ${PROJECT_SOURCE_DIR}/include/red)
 set(HEADERS ${INC_DIR}/session.hpp ${INC_DIR}/session_impl.hpp ${INC_DIR}/session_envcache.hpp src/impl.hpp)
 
 add_library(sessions ${HEADERS} src/session.cpp)
