--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,25 @@
 cmake_minimum_required(VERSION 3.10)
 project(sessions)
 
-set(INC_DIR ${PROJECT_SOURCE_DIR}/include/red)
-set(HEADERS ${INC_DIR}/session.hpp ${INC_DIR}/session_impl.hpp ${INC_DIR}/session_envcache.hpp src/impl.hpp)
+set(HEADERS include/red/session.hpp include/red/session_impl.hpp include/red/session_envcache.hpp src/impl.hpp)
+if(WIN32)
+  set(HEADERS ${HEADERS} src/win32.hpp)
+endif()
+
 
 add_library(sessions ${HEADERS} src/session.cpp)
-
-target_include_directories(sessions PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_compile_features(sessions PUBLIC cxx_std_17)
 target_sources(sessions PRIVATE
   $<$<NOT:$<PLATFORM_ID:Windows>>:src/posix.cxx>
   $<$<PLATFORM_ID:Windows>:src/windows.cxx>
 )
+target_include_directories(sessions PUBLIC include)
+target_compile_features(sessions PUBLIC cxx_std_17)
 
 # tests
 add_executable(tests test/test.cpp test/util.cpp)
 target_link_libraries(tests PRIVATE sessions)
+target_include_directories(tests PRIVATE src)
 
-if(MSVC)
+if(WIN32)
   add_compile_definitions(UNICODE _UNICODE)
 endif()
