update range-v3 to 0.10.0, plus some other stuff
- add version in cmake
- add option to not use 'gnu::constructor'
- moved ci_char_traits to impl ns
- change calls of 'ranges::view' to 'ranges::views'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
-project(sessions)
+project(sessions VERSION 0.0.5)
 
-option(SESSIONS_TESTS "Enable tests" On)
+option(SESSIONS_TESTS "Build tests" On)
+
+if(WIN32)
+  add_compile_definitions(UNICODE _UNICODE)
+else()
+  option(SESSION_NOEXTENTIONS "Disable use of the gnu constructor attribute (requires calling 'init_args')")
+endif()
 
 
 set(HEADERS include/red/session.hpp include/red/session_impl.hpp src/impl.hpp)
@@ -16,17 +22,15 @@ target_compile_features(sessions PUBLIC cxx_std_17)
 
 # submodules
 add_subdirectory(3rd-party/ranges)
-
 target_link_libraries(sessions PUBLIC range-v3)
 
 
-if(WIN32)
-  add_compile_definitions(UNICODE _UNICODE)
-endif()
-
-# tests
 if(SESSIONS_TESTS)
   add_executable(tests test/test.cpp test/util.cpp)
   target_link_libraries(tests PRIVATE sessions)
   target_include_directories(tests PRIVATE src)
+endif()
+
+if(SESSION_NOEXTENTIONS)
+  target_compile_definitions(sessions PRIVATE SESSION_NOEXTENTIONS)
 endif()
