--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,23 +9,19 @@ else()
   option(SESSION_NOEXTENTIONS "Disable use of the gnu constructor attribute (requires calling 'init_args')")
 endif()
 
-set(HEADERS include/session.hpp include/ranges.hpp include/sys_layer.hpp)
+add_library(sessions src/session.cpp)
 
-add_library(sessions ${HEADERS} src/session.cpp)
-
-target_include_directories(sessions PUBLIC include)
-target_compile_features(sessions PUBLIC cxx_std_20)
-
-# submodules
-# add_subdirectory(3rd-party/ranges)
-# target_link_libraries(sessions PUBLIC range-v3::range-v3)
+target_include_directories(sessions PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+target_compile_features(sessions PUBLIC cxx_std_17)
 
 # 3rd-party
 find_package(Catch2 CONFIG)
 find_package(range-v3 0.10.0 CONFIG REQUIRED)
 
 target_link_libraries(sessions PUBLIC range-v3::range-v3)
-
 
 if(SESSIONS_TESTS AND Catch2_FOUND)
   add_executable(tests test/test.cpp)
@@ -37,3 +33,10 @@ endif()
 if(SESSION_NOEXTENTIONS)
   target_compile_definitions(sessions PRIVATE SESSION_NOEXTENTIONS)
 endif()
+
+# installation
+add_library(red::sessions ALIAS sessions)
+include(cmake/install.cmake)
+
+install_targets(sessions)
+configure_and_install(cmake/redConfig.cmake red:: AnyNewerVersion)
