--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,18 +22,20 @@ else()
   target_compile_features(sessions PUBLIC cxx_std_17)
 endif()
 
-
 # 3rd-party
-find_package(Catch2 CONFIG)
 find_package(range-v3 0.10.0 CONFIG REQUIRED)
 
 target_link_libraries(sessions PUBLIC range-v3::range-v3)
 
-if(SESSIONS_TESTS AND Catch2_FOUND)
+if(SESSIONS_TESTS)
+  find_package(Catch2 CONFIG REQUIRED)
+  enable_testing()
+
   add_executable(tests test/test.cpp)
-  target_link_libraries(tests PRIVATE sessions)
-  target_link_libraries(tests PRIVATE Catch2::Catch2)
-  target_include_directories(tests PRIVATE src)
+  target_link_libraries(tests PRIVATE sessions Catch2::Catch2)
+
+  add_test(NAME all-tests  COMMAND tests -- áéíóú words something -l 123
+          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endif()
 
 if(SESSION_NOEXTENTIONS)
