--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
-project(sessions VERSION 0.1.2)
+project(sessions VERSION 0.2.0)
 
 option(SESSIONS_TESTS "Build tests." On)
 option(SESSIONS_UTF8 "Force UTF-8 storage.")
 
-if(WIN32)
-  add_compile_definitions(UNICODE _UNICODE)
-else()
-  option(SESSIONS_NOEXTENTIONS "Disable use of the gnu constructor attribute (requires calling 'init_args')")
+if(UNIX)
+  option(SESSIONS_NOEXTENTIONS "Disable use of the gnu constructor attribute (requires calling 'arguments::init')")
 endif()
 
 add_library(sessions src/session.cpp)
@@ -37,7 +35,7 @@ if(SESSIONS_TESTS)
           WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endif()
 
-configure_file(include/red/config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/red/config.h)
+configure_file(config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/red/config.h)
 
 # installation
 add_library(red::sessions ALIAS sessions)
