move headers to red/sessions
fix header install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,18 @@ cmake_minimum_required(VERSION 3.10)
 project(sessions VERSION 0.2.0)
 
 option(SESSIONS_TESTS "Build tests." On)
-option(SESSIONS_UTF8 "Force UTF-8 storage.")
+option(SESSIONS_UTF8 "Force UTF-8 storage." On)
 
 if(UNIX)
   option(SESSIONS_NOEXTENTIONS "Disable use of the gnu constructor attribute (requires calling 'arguments::init')")
 endif()
 
-add_library(sessions src/session.cpp)
+set(INC_SUBDIR red/sessions)
+
+set(HEADERS session.hpp ranges.hpp sys_layer.hpp config.h)
+list(TRANSFORM HEADERS PREPEND include/${INC_SUBDIR}/)
+
+add_library(sessions src/session.cpp ${HEADERS})
 target_compile_features(sessions PUBLIC cxx_std_17)
 
 target_include_directories(sessions PUBLIC
@@ -20,6 +25,7 @@ target_include_directories(sessions PUBLIC
 find_package(range-v3 0.10.0 CONFIG REQUIRED)
 target_link_libraries(sessions PUBLIC range-v3::range-v3)
 
+# range-v3 0.11.0 allows MSVC in c++17 mode
 if(MSVC AND range-v3_VERSION VERSION_LESS 0.11.0)
   target_compile_features(sessions PUBLIC cxx_std_20)
 endif()
@@ -36,11 +42,13 @@ if(SESSIONS_TESTS)
           WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endif()
 
-configure_file(config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/red/config.h)
+configure_file(config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/include/${INC_SUBDIR}/config.h)
 
 # installation
 add_library(red::sessions ALIAS sessions)
+
 include(cmake/install.cmake)
 
 install_targets(sessions)
 configure_and_install(cmake/redConfig.cmake red:: AnyNewerVersion)
+install(DIRECTORY include/ DESTINATION include)
