--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ add_library(red::sessions ALIAS sessions)
 include(cmake/install.cmake)
 
 install_targets(sessions)
-configure_and_install(cmake/redConfig.cmake red:: AnyNewerVersion)
+configure_and_install(cmake/redConfig.cmake red AnyNewerVersion)
 install(DIRECTORY include/ DESTINATION include)
 
 set_target_properties(sessions PROPERTIES DEBUG_POSTFIX d)
