--- a/config.h.in
+++ b/config.h.in
@@ -1,7 +1,7 @@
 // Red Sessions config header
 
-#ifndef SESSIONS_CONFIG
-#define SESSIONS_CONFIG
+#ifndef RED_SESSIONS_CONFIG
+#define RED_SESSIONS_CONFIG
 
 #define SESSIONS_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
 #define SESSIONS_VERSION_MINOR @PROJECT_VERSION_MINOR@
@@ -12,4 +12,4 @@
 #cmakedefine SESSIONS_UTF8
 #cmakedefine SESSIONS_NOEXTENTIONS
 
-#endif // SESSIONS_CONFIG
+#endif // RED_SESSIONS_CONFIG
