fix build on linux, changed arguments::init
'arguments::init' is no longer conditionaly visible.
Add SESSIONS_AUTORUN to wrap [[gnu::constructor]]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ target_include_directories(sessions PUBLIC
 )
 
 # 3rd-party
-find_package(range-v3 0.10.0 CONFIG REQUIRED)
+find_package(range-v3 CONFIG REQUIRED)
 target_link_libraries(sessions PUBLIC range-v3::range-v3)
 
 # range-v3 0.11.0 allows MSVC in c++17 mode
