--- a/config.h.in
+++ b/config.h.in
@@ -13,12 +13,12 @@
 #cmakedefine SESSIONS_NOEXTENTIONS
 
 
-#if defined(SESSIONS_NOEXTENTIONS) or defined(_MSC_VER)
+#if defined(_MSC_VER) || defined(SESSIONS_NOEXTENTIONS)
 #   define SESSIONS_AUTORUN
 #else
 // https://gcc.gnu.org/onlinedocs/gcc-8.3.0/gcc/Common-Function-Attributes.html#index-constructor-function-attribute
 // https://stackoverflow.com/a/37012337
 #   define SESSIONS_AUTORUN [[gnu::constructor]]
-#endif // WIN32 or SESSIONS_NOEXTENTIONS
+#endif
 
 #endif // RED_SESSIONS_CONFIG
