--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,17 @@
 cmake_minimum_required(VERSION 3.10)
-project(sessions VERSION 0.3.1)
+project(sessions VERSION 0.4.0)
 
 option(SESSIONS_TESTS "Build tests." Off)
 
 if(UNIX)
   option(SESSIONS_NOEXTENTIONS "Disable use of the gnu constructor attribute.")
+
+  # check for /proc
+  execute_process(COMMAND sh -c "test -f /proc/self/cmdline" RESULT_VARIABLE ptest)
+  if(ptest EQUAL 0)
+    set(HAS_PROCFS YES)
+  endif()
+  
 endif()
 if(WIN32)
   option(SESSIONS_UTF8 "Use UTF-8 codepage when converting to/from wide strings." On)
